ATalkPass1Parser.java
// Generated from ATalkPass1.g4 by ANTLR 4.7

      import java.util.ArrayList;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ATalkPass1Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, CONST_NUM=38, 
		CONST_CHAR=39, CONST_STR=40, NL=41, ID=42, COMMENT=43, WS=44;
	public static final int
		RULE_program = 0, RULE_actor = 1, RULE_state = 2, RULE_receiver = 3, RULE_type = 4, 
		RULE_block = 5, RULE_statements = 6, RULE_statement = 7, RULE_stm_vardef = 8, 
		RULE_stm_tell = 9, RULE_stm_write = 10, RULE_stm_if_elseif_else = 11, 
		RULE_stm_foreach = 12, RULE_stm_quit = 13, RULE_stm_break = 14, RULE_stm_assignment = 15, 
		RULE_expr = 16, RULE_expr_assign = 17, RULE_expr_or = 18, RULE_expr_or_tmp = 19, 
		RULE_expr_and = 20, RULE_expr_and_tmp = 21, RULE_expr_eq = 22, RULE_expr_eq_tmp = 23, 
		RULE_expr_cmp = 24, RULE_expr_cmp_tmp = 25, RULE_expr_add = 26, RULE_expr_add_tmp = 27, 
		RULE_expr_mult = 28, RULE_expr_mult_tmp = 29, RULE_expr_un = 30, RULE_expr_mem = 31, 
		RULE_expr_mem_tmp = 32, RULE_expr_other = 33;
	public static final String[] ruleNames = {
		"program", "actor", "state", "receiver", "type", "block", "statements", 
		"statement", "stm_vardef", "stm_tell", "stm_write", "stm_if_elseif_else", 
		"stm_foreach", "stm_quit", "stm_break", "stm_assignment", "expr", "expr_assign", 
		"expr_or", "expr_or_tmp", "expr_and", "expr_and_tmp", "expr_eq", "expr_eq_tmp", 
		"expr_cmp", "expr_cmp_tmp", "expr_add", "expr_add_tmp", "expr_mult", "expr_mult_tmp", 
		"expr_un", "expr_mem", "expr_mem_tmp", "expr_other"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'actor'", "'<'", "'>'", "'end'", "','", "'receiver'", "'('", "')'", 
		"'int'", "'char'", "'['", "']'", "'begin'", "'='", "'sender'", "'self'", 
		"'<<'", "'write'", "'if'", "'elseif'", "'else'", "'foreach'", "'in'", 
		"'quit'", "'break'", "'or'", "'and'", "'=='", "'<>'", "'+'", "'-'", "'*'", 
		"'/'", "'not'", "'{'", "'}'", "'read'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, "CONST_NUM", "CONST_CHAR", "CONST_STR", "NL", "ID", "COMMENT", 
		"WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ATalkPass1.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	  String codeData = "";
	  int foreachCount = 0;
	  int errorOccured = 0;
	  int actorCount=0;
	  int receiverCount=0;
	  int repeatedVarCount = 0;

	  void beginScope() {
	    	int localOffset = 0;
	    	int globalOffset = 0;

	    	if(SymbolTable.top != null) {
	        	localOffset = SymbolTable.top.getOffset(Register.SP);
	        	globalOffset = SymbolTable.top.getOffset(Register.GP);
	    	}

	        SymbolTable.push(new SymbolTable(SymbolTable.top));

	        SymbolTable.top.setOffset(Register.SP, localOffset);
	        SymbolTable.top.setOffset(Register.GP, globalOffset);
	    }

	  void endScope() {
	      codeData += ("Stack offset: " + SymbolTable.top.getOffset(Register.SP) + "\n\n");
	      if(SymbolTable.top.getPreSymbolTable() != null) {
	            SymbolTable.top.getPreSymbolTable().setOffset(
	                Register.GP,
	                SymbolTable.top.getOffset(Register.GP)
	            );
	        }
	        SymbolTable.pop();
	  }

	  void addVarItem(String name, Type type, int lineNum, Register reg){
	    try{
	      if (reg == Register.SP)
	        putLocalVar(name, type);
	      else if (reg == Register.GP)
	        putGlobalVar(name, type);
	      printVarData(name, type, reg);
	    }catch(ItemAlreadyExistsException e){
	      repeatedVarCount++;
	      printErrors(lineNum , "Variable <" + name + "> already exist!");
	      try{
	        if (reg == Register.SP)
	          putLocalVar(name + "_temporary_" + repeatedVarCount, type);
	        else if (reg == Register.GP)
	          putGlobalVar(name + "_temporary_" + repeatedVarCount, type);
	      }catch(ItemAlreadyExistsException ex){}
	    }
	  }

	  void addActor(int size, String name, int lineNum){
	    if( size <= 0 ){
	      size=0;
	      printErrors(lineNum, "size of Actor queue is negative.");
	    }
	    codeData += ("Actor\n\tname: "+ name
	        + "\n\tActor queue size: " + size + "\n\n");
	    try{
	      putActor(name, SymbolTable.top.getOffset(Register.GP));
	    }catch(ActorAlreadyExistsException e){
	      actorCount++;
	      printErrors(lineNum,"Actor <" + name + "> already exist!");
	      String new_name = name + "_temporary_" + actorCount;
	      try{
	        putActor(new_name, SymbolTable.top.getOffset(Register.GP));
	      }catch(ActorAlreadyExistsException ex){}
	    }
	  }

	  void addReceiver(String receiverName,String actorName, int lineNum, ArrayList<Type> argumentTypes){
	     try{
	       putReceiver(receiverName, actorName, argumentTypes);
	       printRecieverData(receiverName, argumentTypes);
	     }catch(ReceiverAlreadyExistsException e){
	       receiverCount++;
	       SymbolTableItemReceiver temp = new SymbolTableItemReceiver(receiverName,actorName,argumentTypes);
	       printErrors(lineNum,"Reciever <" + temp.getKey() + "> already exist!");
	       String new_name = receiverName + "_temporary_" + receiverCount;
	       try{
	         putReceiver(new_name, actorName, argumentTypes);
	       }catch(ReceiverAlreadyExistsException ex){}
	     }
	  }

	  void putLocalVar(String name, Type type) throws ItemAlreadyExistsException {
	      SymbolTable.top.put(
	          new SymbolTableLocalVariableItem(
	              new Variable(name, type),
	              SymbolTable.top.getOffset(Register.SP)
	          )
	      );
	  }

	  void putGlobalVar(String name, Type type) throws ItemAlreadyExistsException {
	      SymbolTable.top.put(
	          new SymbolTableGlobalVariableItem(
	              new Variable(name, type),
	              SymbolTable.top.getOffset(Register.GP)
	          )
	      );
	  }

	  void putActor(String name, int offset)throws ActorAlreadyExistsException{
	    try{
	      SymbolTable.top.put(
	          new SymbolTableItemActor(name,
	              SymbolTable.top.getOffset(Register.GP)
	          )
	      );
	    }catch(ItemAlreadyExistsException e){
	      throw new ActorAlreadyExistsException();
	    }
	  }

	  void putReceiver(String name,String actorName, ArrayList<Type> argumentTypes)throws ReceiverAlreadyExistsException{
	    try{
	      SymbolTable.top.put(
	          new SymbolTableItemReceiver(name,actorName,argumentTypes)
	      );
	    }catch(ItemAlreadyExistsException e){
	      throw new ReceiverAlreadyExistsException();
	    }
	  }

	  void addRecieverArguments(ArrayList<Type> argumentTypes, ArrayList<String> argumentsNames, int lineNum){
	    for (int i = 0; i < argumentTypes.size(); i++)
	      addVarItem(argumentsNames.get(i), argumentTypes.get(i), lineNum, Register.SP);
	  }

	  /* Type createArray(Type t_, ArrayList<int> dims){
	    Type t = t_;
	    for(int i = dims.length() - 1; i >= 0; i--)
	      t = new ArrayType(t, dims.get(i));
	    return t;
	  } */

	  void printVarData(String name, Type type, Register reg){
	    codeData += ("Variable \n\tname: "+ name + "\n\tType: " + type + "\n\tOffset:" + (SymbolTable.top.getOffset(reg) - type.size())
	          + "\n\tVarible size: " + type.size() + "\n\n");
	  }

	  void printRecieverData(String recName, ArrayList<Type> argumentTypes){
	    String arguments = "(";
	    for (int i = 0; i < argumentTypes.size(); i++){
	      arguments += argumentTypes.get(i).toString();
	      if (i!=argumentTypes.size()-1)
	        arguments+=", ";
	    }
	    arguments += ")";
	    codeData += ("Reciever: " + recName + arguments + "\n\n.");
	  }

	  void printErrors(int lineNum, String err){
	    errorOccured ++;
	    if(lineNum >= 0)
	      print("Error(" + lineNum + "): " + err + "\n");
	    else
	      print("Error: " + err + "\n");
	  }

	  void print(String str){
	      System.out.println(str);
	  }

	public ATalkPass1Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<ActorContext> actor() {
			return getRuleContexts(ActorContext.class);
		}
		public ActorContext actor(int i) {
			return getRuleContext(ActorContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(ATalkPass1Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ATalkPass1Parser.NL, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			beginScope();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0 || _la==NL) {
				{
				setState(73);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
					{
					setState(69);
					actor();
					actorCount++;
					}
					break;
				case NL:
					{
					setState(72);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			      endScope();
			      if(actorCount == 0)
			        printErrors(-1,"actor doesnt found!");
			      if(errorOccured == 0)
			        print(codeData);
			  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActorContext extends ParserRuleContext {
		public Token name;
		public Token size;
		public List<TerminalNode> NL() { return getTokens(ATalkPass1Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ATalkPass1Parser.NL, i);
		}
		public TerminalNode ID() { return getToken(ATalkPass1Parser.ID, 0); }
		public TerminalNode CONST_NUM() { return getToken(ATalkPass1Parser.CONST_NUM, 0); }
		public TerminalNode EOF() { return getToken(ATalkPass1Parser.EOF, 0); }
		public List<StateContext> state() {
			return getRuleContexts(StateContext.class);
		}
		public StateContext state(int i) {
			return getRuleContext(StateContext.class,i);
		}
		public List<ReceiverContext> receiver() {
			return getRuleContexts(ReceiverContext.class);
		}
		public ReceiverContext receiver(int i) {
			return getRuleContext(ReceiverContext.class,i);
		}
		public ActorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).enterActor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).exitActor(this);
		}
	}

	public final ActorContext actor() throws RecognitionException {
		ActorContext _localctx = new ActorContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_actor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(T__0);
			setState(81);
			((ActorContext)_localctx).name = match(ID);
			setState(82);
			match(T__1);
			setState(83);
			((ActorContext)_localctx).size = match(CONST_NUM);
			setState(84);
			match(T__2);
			setState(85);
			match(NL);

			      addActor((((ActorContext)_localctx).size!=null?Integer.valueOf(((ActorContext)_localctx).size.getText()):0), (((ActorContext)_localctx).name!=null?((ActorContext)_localctx).name.getText():null), (((ActorContext)_localctx).name!=null?((ActorContext)_localctx).name.getLine():0));  beginScope();
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__8) | (1L << T__9) | (1L << NL))) != 0)) {
				{
				setState(90);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__8:
				case T__9:
					{
					setState(87);
					state();
					}
					break;
				case T__5:
					{
					setState(88);
					receiver((((ActorContext)_localctx).name!=null?((ActorContext)_localctx).name.getText():null));
					}
					break;
				case NL:
					{
					setState(89);
					match(NL);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			endScope();
			setState(96);
			match(T__3);
			setState(97);
			_la = _input.LA(1);
			if ( !(_la==EOF || _la==NL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StateContext extends ParserRuleContext {
		public TypeContext tp;
		public Token name;
		public TerminalNode NL() { return getToken(ATalkPass1Parser.NL, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(ATalkPass1Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ATalkPass1Parser.ID, i);
		}
		public StateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_state; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).enterState(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).exitState(this);
		}
	}

	public final StateContext state() throws RecognitionException {
		StateContext _localctx = new StateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_state);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((StateContext)_localctx).tp = type();
			setState(100);
			((StateContext)_localctx).name = match(ID);

			      addVarItem((((StateContext)_localctx).name!=null?((StateContext)_localctx).name.getText():null), ((StateContext)_localctx).tp.t, (((StateContext)_localctx).name!=null?((StateContext)_localctx).name.getLine():0), Register.GP);
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__4) {
				{
				{
				setState(102);
				match(T__4);
				setState(103);
				((StateContext)_localctx).name = match(ID);

				      addVarItem((((StateContext)_localctx).name!=null?((StateContext)_localctx).name.getText():null), ((StateContext)_localctx).tp.t, (((StateContext)_localctx).name!=null?((StateContext)_localctx).name.getLine():0), Register.GP);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(110);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReceiverContext extends ParserRuleContext {
		public String actorName;
		public Token name;
		public TypeContext tp;
		public Token argName;
		public List<TerminalNode> NL() { return getTokens(ATalkPass1Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ATalkPass1Parser.NL, i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(ATalkPass1Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ATalkPass1Parser.ID, i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public ReceiverContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ReceiverContext(ParserRuleContext parent, int invokingState, String actorName) {
			super(parent, invokingState);
			this.actorName = actorName;
		}
		@Override public int getRuleIndex() { return RULE_receiver; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).enterReceiver(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).exitReceiver(this);
		}
	}

	public final ReceiverContext receiver(String actorName) throws RecognitionException {
		ReceiverContext _localctx = new ReceiverContext(_ctx, getState(), actorName);
		enterRule(_localctx, 6, RULE_receiver);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			ArrayList<Type> argumentsTypes = new ArrayList<Type>();
			   ArrayList<String> argumentsNames = new ArrayList<String>(); 
			setState(113);
			match(T__5);
			setState(114);
			((ReceiverContext)_localctx).name = match(ID);
			setState(115);
			match(T__6);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__8 || _la==T__9) {
				{
				setState(116);
				((ReceiverContext)_localctx).tp = type();
				argumentsTypes.add(((ReceiverContext)_localctx).tp.t);
				setState(118);
				((ReceiverContext)_localctx).argName = match(ID);
				argumentsNames.add((((ReceiverContext)_localctx).argName!=null?((ReceiverContext)_localctx).argName.getText():null));
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__4) {
					{
					{
					setState(120);
					match(T__4);
					setState(121);
					((ReceiverContext)_localctx).tp = type();
					argumentsTypes.add(((ReceiverContext)_localctx).tp.t);
					setState(123);
					((ReceiverContext)_localctx).argName = match(ID);
					argumentsNames.add((((ReceiverContext)_localctx).argName!=null?((ReceiverContext)_localctx).argName.getText():null));
					}
					}
					setState(130);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(133);
			match(T__7);
			setState(134);
			match(NL);
			addReceiver((((ReceiverContext)_localctx).name!=null?((ReceiverContext)_localctx).name.getText():null), _localctx.actorName, (((ReceiverContext)_localctx).name!=null?((ReceiverContext)_localctx).name.getLine():0), argumentsTypes);
			           beginScope();
			           addRecieverArguments(argumentsTypes, argumentsNames, (((ReceiverContext)_localctx).name!=null?((ReceiverContext)_localctx).name.getLine():0));
			         
			setState(136);
			statements();
			setState(137);
			match(T__3);
			setState(138);
			match(NL);
			endScope();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Type t;
		public Token size;
		public List<TerminalNode> CONST_NUM() { return getTokens(ATalkPass1Parser.CONST_NUM); }
		public TerminalNode CONST_NUM(int i) {
			return getToken(ATalkPass1Parser.CONST_NUM, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			ArrayList<Integer> dims = new ArrayList<Integer>();
			setState(146);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__8:
				{
				{
				setState(142);
				match(T__8);
				}
				((TypeContext)_localctx).t =  new IntType();
				}
				break;
			case T__9:
				{
				{
				setState(144);
				match(T__9);
				}
				((TypeContext)_localctx).t =  new CharacterType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__10) {
				{
				{
				setState(148);
				match(T__10);
				setState(149);
				((TypeContext)_localctx).size = match(CONST_NUM);
				setState(150);
				match(T__11);

				      int size_arr = (((TypeContext)_localctx).size!=null?Integer.valueOf(((TypeContext)_localctx).size.getText()):0);
				      if((((TypeContext)_localctx).size!=null?Integer.valueOf(((TypeContext)_localctx).size.getText()):0) <= 0){
				        printErrors((((TypeContext)_localctx).size!=null?((TypeContext)_localctx).size.getLine():0),"size of array is negative");
				        size_arr = 0;
				      }
				      dims.add(size_arr);
				    
				}
				}
				setState(156);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			      for(int i=dims.size()-1; i >= 0; i--){
			        ((TypeContext)_localctx).t =  new ArrayType(dims.get(i),_localctx.t);
			      }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<TerminalNode> NL() { return getTokens(ATalkPass1Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ATalkPass1Parser.NL, i);
		}
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(T__12);
			beginScope();
			setState(161);
			match(NL);
			setState(162);
			statements();
			setState(163);
			match(T__3);
			endScope();
			setState(165);
			match(NL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NL() { return getTokens(ATalkPass1Parser.NL); }
		public TerminalNode NL(int i) {
			return getToken(ATalkPass1Parser.NL, i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ATalkPass1Listener ) ((ATalkPass1Listener)listener).exitStatements(this);
		}
	}
